@@ -9,10 +9,10 @@ import net.minecraftforge.fml.common.Loader;
 import net.silentchaos512.lib.proxy.CommonProxy;
 import net.silentchaos512.lib.registry.SRegistry;
 import net.silentchaos512.lib.util.Color;
-import net.silentchaos512.scalinghealth.ScalingHealth;
 import net.silentchaos512.scalinghealth.compat.morpheus.SHMorpheusCompat;
 import net.silentchaos512.scalinghealth.config.ConfigScalingHealth;
 import net.silentchaos512.scalinghealth.event.BlightHandler;
+import net.silentchaos512.scalinghealth.event.DamageScaling;
 import net.silentchaos512.scalinghealth.event.DifficultyHandler;
 import net.silentchaos512.scalinghealth.event.PetEventHandler;
 import net.silentchaos512.scalinghealth.event.PlayerBonusRegenHandler;
@@ -41,6 +41,7 @@ public class ScalingHealthCommonProxy extends CommonProxy {
     MinecraftForge.EVENT_BUS.register(DifficultyHandler.INSTANCE);
     MinecraftForge.EVENT_BUS.register(BlightHandler.INSTANCE);
     MinecraftForge.EVENT_BUS.register(PetEventHandler.INSTANCE);
+    MinecraftForge.EVENT_BUS.register(DamageScaling.instance);
 
     // Morpheus compat
     if (Loader.isModLoaded("morpheus") && ConfigScalingHealth.MORPHEUS_OVERRIDE)
