@@ -1,4 +1,5 @@
 1.3.15
+Added: Configs to scale damage taken with either max health or player/area difficulty. How steeply damage amounts scale can be set for each damage source. You can add mod sources to the list too, you just need to know their damage type string (trying enabling debug mode, get hurt by it, then check the log). Check your spelling, there's no way for me to detect a source that doesn't exist. (#99)
 Added: Config to make every mob spawn as a blight (be careful with that) (#102)
 Changed: Disabling custom heart rendering will now override and disable health text settings (#104)
 Fixed (maybe): Desync of health on server when Scaling Health is not allowed to modify health (#104)
